--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,41 @@
-<div>Hello world You are in authors!</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/main.css">
+  <title>Portfolia</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"  rel="stylesheet"/>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+    <div class="frame">
+        <div class="main_frame">
+            <div class="left_frame">
+                <div class="left_1">
+                    <div class="left_1-1">
+                    </div>
+                     <div class="left_1-2"></div>
+                      <div class="left_1-3"></div>
+                       <div class="left-icons"></div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_2"></div>
+                <div class="marginer"></div>
+                <div class="left_3"></div>
+                <div class="marginer"></div>
+                <div class="left_4"></div>
+                <div class="marginer"></div>
+                <div class="left_5"></div>
+                <div class="marginer"></div>
+            </div>
+            </div>
+            <div class="midd_frame"></div>
+            <div class="right_frame"></div>
+        </div>
+    </div>
+</body>
+</html>
+
+
