--- a/views/author.ejs
+++ b/views/author.ejs
@@ -15,15 +15,63 @@
             <div class="left_frame">
                 <div class="left_1">
                     <div class="left_1-1">
+                        <img src="images/profile.png" width="156px" height="142px" alt=""
+                        />
                     </div>
-                     <div class="left_1-2"></div>
-                      <div class="left_1-3"></div>
-                       <div class="left-icons"></div>
+                     <div class="left_1-2"><%= user.name %></div>
+                     <div class="left_1-3"><%= user.profession %></div>
+                       <div class="left-icons">
+                        <a class="link.href"  href="">
+                            <div class="icon">
+                                <img src="icon/facebook.svg" class="icon-1"/>
+                            </div>
+                        </a>
+                       <a class="link.href"  href="">
+                            <div class="icon">
+                                <img src="icon/instagram.svg" class="icon-1"/>
+                            </div>
+                        </a>
+                       <a class="link.href"  href="">
+                            <div class="icon">
+                                <img src="icon/twitter.svg" class="icon-1"/>
+                            </div>
+                        </a>
+                       <a class="link.href"  href="">
+                            <div class="icon">
+                                <img src="icon/linkeding.svg" class="icon-1"/>
+                            </div>
+                        </a>
+                       <a class="link.href"  href="">
+                            <div class="icon">
+                                <img src="icon/youtube.svg" class="icon-1"/>
+                            </div>
+                        </a>
+                       <a class="link.href"  href="">
+                            <div class="icon">
+                                <img src="icon/dribbble.svg" class="icon-1"/>
+                            </div>
+                        </a>
+                       </div>
                 </div>
                 <div class="marginer"></div>
-                <div class="left_2"></div>
+                <div class="left_2">
+                    <div class="left_2-1">
+                        <div class="label">Age</div>
+                        <div class="value"><%= user.age %></div>
+                    </div>
+                    <div class="left_2-1">
+                        <div class="label">Residence</div>
+                        <div class="value"><%= user.residence %></div>
+                    </div>
+                    <div class="left_2-1">
+                        <div class="label">Address</div>
+                        <div class="value"><%= user.address %></div>
+                    </div>
+                </div>
                 <div class="marginer"></div>
-                <div class="left_3"></div>
+                <div class="left_3">
+
+                </div>
                 <div class="marginer"></div>
                 <div class="left_4"></div>
                 <div class="marginer"></div>
