--- a/public/main.css
+++ b/public/main.css
@@ -144,47 +144,83 @@
     position: relative;
     width: 221px;
     height: 126px;
-    margin-left: 44px;
-     background-color: aqua; 
+    margin-top: 25px;
+    display: grid;
+    grid-template-columns: auto 10px auto;
     font-family: sans-serif;
-    display: block;
-}
-.main_frame .left_2 .left_2-1 {
-    position: relative;
-    display: flex;
-    width: 221px;
+    gap: 10px;
     align-items: center;
-    flex-direction: row;
-    margin-bottom: 10px;
+    margin-left: 44px;
 }
-.main_frame .label {
-   width: 219.55px;
-   height: 25px;
-   font-family: sans-serif;
-   font-weight: 400;
-   font-size: 15px;
-   line-height: 24px;
-   text-transform: capitalize;
-   font-family: sans-serif;
+.main_frame .left_2 .object {
+    background-color: aqua;
+    color: yellow;
+    padding: 5px 10px;
+    font-weight: bold;
 }
-.main_frame .value {
-    width: 131.13px;
-    height: 48px;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 24px;
-    align-items: center;
-    justify-content: center;
+.main_frame .left_2 .space {
+    color: white;
+    text-align: center;
 }
 
-.main_frame .left_frame .left_3 {
+.main_frame .left_2 .class-age {
+    margin-left: 20px;
+    color: black;
+}
+
+.main_frame .left_2 .class-residence {
+    margin-left: 16px;
+    color: black
+}
+
+.main_frame .left_2 .class-freelance {
+    margin-left: 16px;
+    color: black;
+}
+
+.main_frame .left_2 .class-address {
+    padding-right: 20px;
+    width: 200px;
+}
+
+.main_frame .marginer {
     position: relative;
     width: 220px;
-    height: 153px;
-    margin-left: 45px;
-    margin-top: 25px;
-    background-color: aqua;
+    height: 0px;
+    margin-left: 40px;
+    margin-right: 25px;
+    margin-top: 39px;
+    border: 1.5px solid #f0f0f6;
 }
+
+.Language-section {
+    width: 220px;
+    font-family: sans-serif;
+}
+.Language {
+    margin-bottom: 20px;
+}
+
+.Language-title {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.progress-bar {
+    height: 6px;
+    border-radius: 4px;
+    background-color: #ffe0a3;
+    overflow: hidden;
+}
+
+.progress-fill {
+    height: 100%;
+    background-color: olivedrab;
+    border-radius: 4px;
+}
+
 .main_frame .left_frame .left_4 {
     position: relative;
     width: 220px;
@@ -192,7 +228,12 @@
     margin-left: 45px;
     margin-top: 25px;
     background-color: aqua;
-}
+} 
+
+/* .skills-section {
+    font-family: sans-serif;
+    width: 220px;
+} */
 
 .main_frame .left_frame .left_5 {
     position: relative;
