--- a/views/author.ejs
+++ b/views/author.ejs
@@ -27,7 +27,7 @@
             <a href=""><div class="icon"><img src="icon/facebook.svg" class="icon-1" /></div></a>
             <a href=""><div class="icon"><img src="icon/instagram.svg" class="icon-1" /></div></a>
             <a href=""><div class="icon"><img src="icon/twitter.svg" class="icon-1" /></div></a>
-            <a href=""><div class="icon"><img src="icon/linkedin.svg" class="icon-1" /></div></a>
+            <a href=""><div class="icon"><img src="icon/linkeding.svg" class="icon-1" /></div></a>
             <a href=""><div class="icon"><img src="icon/youtube.svg" class="icon-1" /></div></a>
             <a href=""><div class="icon"><img src="icon/dribbble.svg" class="icon-1" /></div></a>
           </div>
@@ -183,7 +183,7 @@
   </div>
   <div class="middle-2">
   <h2>My Services</h2>
-  <p class="about-me_description" style="margin: 0 auto 50px auto; max-width: 800px; text-align: center;">
+  <p class="about-me_description" style="margin: 0 150px 50px 150px; text-align: center;">
     <%= user.service_desc %>
   </p>
 
@@ -208,19 +208,19 @@
 
     <div class="flex-item">
       <img src="menu_icon/Game design.svg" alt="Game Design">
-      <h4>Game Design</h4>
-      <p class="about-me_description">Character Design, Props & Objects</p>
+      <h4></h4>
+      <p class="about-me_description"></p>
     </div>
 
     <div class="flex-item">
       <img src="menu_icon/Photography.svg" alt="Photography">
-      <h4>Photography</h4>
-      <p class="about-me_description">Portrait, Product Photography</p>
+      <h4></h4>
+      <p class="about-me_description"></p>
     </div>
 
     <div class="flex-item">
       <img src="menu_icon/Advertising.svg" alt="Advertising">
-      <h4>Advertising</h4>
+      <h4></h4>
       <p class="about-me_description"></p>
     </div>
   </div>
@@ -231,7 +231,21 @@
       
 
       <!-- RIGHT FRAME -->
-      <div class="right_frame"></div>
+    <div class="right_frame">
+      <div class="right-menu">
+      <div class="menu-item">                  
+      <nav class="nav-links">
+      <a class="nav-item" href="#main"><img src="icon/icona.svg" alt="Main icon" /></a>
+      <a class="nav-item" href="#home"><img src="icon/Home.svg" alt="Home" /></a>
+      <a class="nav-item" href="#cv"><img src="icon/Cv.svg" alt="CV" /></a>
+      <a class="nav-item" href="#portfolio"><img src="icon/Portfolio.svg" alt="Portfolio" /></a>
+      <a class="nav-item" href="#blog"><img src="icon/Blog.svg" alt="Blog" /></a>
+      <a class="nav-item" href="#contact"><img src="icon/Contact.svg" alt="Contact" /></a>
+      </nav>
+     </div>
+      </div>
+    </div>
+
       
     </div> <!-- END main_frame -->
   </div> <!-- END frame -->
