--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -33,6 +33,22 @@
             </div>
           </form>
         </div>
+
+        
+         <ul id="item-list" class="list group ph-5">
+             <% items.map(function(item) { %>
+              <li 
+              class="list-group-item list-group-item-info d-flex align-items-center justify-content-between">
+            <span class="item-text"><%=item.reja%></span>
+            <div>
+              <button data-id="<%=item._id%>"
+                class="edit-me btn-secondary btn-sm mr-1">Ozgartish</button>
+              <button  data-id="<%=item._id%>" class="delete-mee btn-danger btn-sm">Ochirish</button>
+            </div>
+          </li>
+              <% }) %>
+         </ul>
+
         <button id="clean all" class="btn btn-danger" style="border-radius: 20px">
           Hamma Rejalarni O'chirish
         </button>
