--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -1,57 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reja2</title>
-  <link  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" 
-  integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" 
-  crossorigin="anonymous"
-  />
+  <title>REJA</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj7@gZWKYbI7@6tWS" crossorigin="anonymous">
 </head>
-<body style="background-color: #b8bbd1">
-    <div class="container">
-        <h1 class="display-4 text-center py-1">Reja va Maqsadlar</h1>
 
-        <div class="jumbotron p-3 shadow-sm">
-          <form id="create-form" action="/create-item" method="POST">
-            <div class="d-flex align-items-center">
-              <input
-              id="create-field"
-              name="reja"
-              autofocus
-              autocomplete="off"
-              class="form-control mr-3"
-              type="text"
-              style="flex: 1"
-              />
-              <button class="btn btn-primary" style="border-radius: 20px">
-                Yangi Reja Qoshish
-              </button>
-            </div>
-          </form>
+<body style="background-color: #b8bbd1;">
+  <div class="container">
+    <h1 class="display-4 text-center py-1">Reja va maqsadlar</h1>
+
+    <div class="jumbotron p-3 shadow-sm">
+      <form id="create-form" action="/create-item" method="POST">
+        <div class="d-flex align-items-center">
+          <input id="create-field" name="reja" autofocus autocomplete="off" class="form-control mr-3" type="text"
+            style="flex:1" required />
+          <button class="btn btn-primary" style="border-radius: 20px; width: 30%;" type="submit">Yangi reja
+            qo'shish</button>
         </div>
-
-        
-         <ul id="item-list" class="list group ph-5">
-             <% items.map(function(item) { %>
-              <li 
-              class="list-group-item list-group-item-info d-flex align-items-center justify-content-between">
-            <span class="item-text"><%=item.reja%></span>
-            <div>
-              <button data-id="<%=item._id%>"
-                class="edit-me btn-secondary btn-sm mr-1">Ozgartish</button>
-              <button  data-id="<%=item._id%>" class="delete-mee btn-danger btn-sm">Ochirish</button>
-            </div>
-          </li>
-              <% }) %>
-         </ul>
-
-        <button id="clean all" class="btn btn-danger" style="border-radius: 20px">
-          Hamma Rejalarni O'chirish
-        </button>
+      </form>
     </div>
+
+
+    <ul id="item-list" class="list-group pb-5">
+      <% items.map(function(item) { %>
+        <li class="list-group-item list-group-item-action d-flex align-items-center justify-content-between">
+          <span class="item-text">
+            <%= item.reja %>
+          </span>
+          <div>
+            <button data-id="<%= item._id %>" class="edit-me btn btn-secondary btn-sm mr-1"
+              style="border-radius: 20px;">Ozgartirish</button>
+            <button data-id="<%= item._id %>" class="delete-me btn btn-danger btn-sm"
+              style="border-radius: 20px;">Ochirish</button>
+          </div>
+        </li>
+        <% }) %>
+
+    </ul>
+
+    <button id="clean-all" class="btn btn-danger" style="border-radius: 20px;">Barchasini tozalash</button>
+
+  </div>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="/browser.js"></script>
+
 </body>
+
 </html>
